fix(docs): align header styling with current guides

--- a/documentation/assets/styles.css
+++ b/documentation/assets/styles.css
@@ -3,31 +3,40 @@
   --scalar-header-height: 48px;
 }
 
-/** Share all text styles */
-.t-doc__header .header-item-link,
-.t-doc__header .header-group-label,
-.t-doc__header .header-version-button {
-  font-size: var(--scalar-small);
-  font-weight: normal;
+.t-header .navigation {
+  gap: 8px;
 }
 
-.t-doc__header .header-item-link:hover,
-.t-doc__header .header-group-label:hover {
+/** Share all text styles */
+.t-header .link,
+.t-header .group__label {
+  font-size: var(--scalar-small);
+  font-weight: normal;
+  line-height: 18px;
+  color: var(--scalar-header-color-2, var(--scalar-color-2));
+  height: auto;
+}
+
+.t-header .link:hover,
+.t-header .group__label:hover {
   color: var(--scalar-sidebar-color-1, var(--scalar-color-1));
 }
 
 /** __cta styles are for when we display the item as a button */
-.t-doc__header .header-item-link.header-item-link__cta {
+.t-header .link.link__button {
   background: var(--scalar-button-1);
   padding: 6px 9px;
   margin-left: 5px;
+  border-radius: var(--scalar-radius);
   margin-right: 0;
+
+  color: var(--scalar-header-background-1, var(--scalar-background-1));
   font-size: var(--scalar-mini);
   font-weight: var(--scalar-semibold);
   border: 1px solid var(--scalar-button-1);
 }
 
-.t-doc__header .header-item-link.header-item-link__cta:hover {
+.t-header .link.link__button:hover {
   opacity: 0.85;
   color: var(--scalar-header-background-1, var(--scalar-background-1));
 }
